@@ -377,6 +377,8 @@ pm-calcium-silicate=Calcium silicate
 pm-broken-vanadium-redox-battery=Broken vanadium redox battery
 pm-broken-lithium-sulfur-battery=Broken lithium-sulfur battery
 pm-vacuum-tube-getter=Vacuum tube getter
+pm-bauxite=Bauxite
+pm-bauxite-powder=Bauxite powder
 
 automation-science-pack=Transition metal pack
 logistic-science-pack=Advanced transition metal pack
@@ -656,6 +658,7 @@ pm-low-sulfur-residuals=Low-sulfur residuals
 pm-ferrous-waste-water=Ferrous waste water
 pm-cupric-waste-water=Cupric waste water
 pm-liquid-heat=Heat
+pm-aluminium-hydroxide-slurry=Aluminium hydroxide slurry
 
 [recipe-name]
 pm-transition-metal-clearing=Transition metal clearing
@@ -1388,6 +1391,7 @@ pm-better-calcium-extraction=Better calcium extraction
 pm-express-inserters=Express inserters
 pm-crushing=Crushing
 pm-wate-water-byproduct-handling=Waste water byproduct handling
+pm-aluminium-processing=Aluminium processing
 
 pm-ferric-chloride-processing=Ferric chloride processing
 pm-advanced-chlorine-processing=Advanced chlorine processing
