@@ -2,10 +2,40 @@ local PM = require("library")
 data:extend({
 
   {
-    type = "recipe",
-    name = "pm-transition-aluminium-leeching",
+    type = "name",
+    name = "pm-bauxite",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/ores/bauxite.png",
     subgroup = "pm-aluminium-ptm",
     order = "a",
+    stack_size = 200
+  },
+  {
+    type = "name",
+    name = "pm-bauxite-powder",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/ores/bauxite.png",
+    subgroup = "pm-aluminium-ptm",
+    order = "b",
+    stack_size = 300
+  },
+
+  {
+    type = "recipe",
+    name = "pm-transition-aluminium-leeching",
+    icons =
+    {
+      {
+        icon = "__periodic-madness__/graphics/icons/ores/aluminium-ore-icon.png",
+        icon_size = 64,
+      },
+      {
+        icon = "__periodic-madness__/graphics/icons/fluids/sodium-hydroxide.png",
+        icon_size = 64,
+      },
+    },
+    subgroup = "pm-aluminium-ptm",
+    order = "aa",
     category = "pm-acids",
     crafting_machine_tint =
     {
@@ -19,15 +49,71 @@ data:extend({
     ingredients =
     {
       PM.ingredient("pm-post-transition-metals-ore", 12),
-      PM.ingredient("pm-sodium",   6)
+      PM.ingredient("pm-sodium-hydroxide", 6, "fluid")
     },
     allow_decomposition = false,
     enabled = false,
     results =
     {
-      PM.product("pm-aluminium-ore", 8),
+      PM.product("pm-bauxite", 8),
     }
   } --[[@as data.RecipePrototype]],
+  {
+    type = "recipe",
+    name = "pm-bauxite-powder",
+    enabled = false,
+    energy_required = 2,
+    category = "pm-crushing",
+    subgroup = "pm-aluminium-ptm",
+    order = "b",
+    allow_productivity = true,
+    ingredients = 
+    {
+      PM.ingredient("pm-bauxite", 8)
+    },
+    results = 
+    {
+      PM.product_range("pm-bauxite-powder", 10, 14)
+    }
+  },
+  {
+    type = "recipe",
+    name = "pm-aluminium-hydroxide-slurry",
+    enabled = false,
+    energy_required = 4,
+    category = "pm-mixing",
+    subgroup = "pm-aluminium-ptm",
+    order = "c",
+    allow_productivity = true,
+    ingredients = 
+    {
+      PM.ingredient("pm-bauxite-powder", 8),
+      PM.ingredient("pm-sodium-hydroxide", 5, "fluid")
+    },
+    results = 
+    {
+      PM.product("pm-aluminium-hydroxide-slurry", 12, "fluid"),
+      PM.product_range("steam", 10, 20, "fluid")
+    }
+  },
+  {
+    type = "recipe",
+    name = "pm-aluminium-ore",
+    enabled = false,
+    energy_required = 8,
+    category = "pm-electrolysis",
+    subgroup = "pm-aluminium-ptm",
+    order = "d",
+    ingredients = 
+    {
+      PM.ingredient("pm-aluminium-hydroxide-slurry", 10),
+      PM.ingredient("pm-calcium-ore", 3),
+    },
+    results = 
+    {
+      PM.product_range("pm-aluminium-ore", 4, 6)
+    }
+  },
 
   {
     type = "recipe",
@@ -44,7 +130,7 @@ data:extend({
       },
     },
     subgroup = "pm-aluminium-ptm",
-    order = "b",
+    order = "ab",
     category = "pm-acids",
     crafting_machine_tint =
     {
@@ -58,6 +144,7 @@ data:extend({
     ingredients =
     {
       PM.ingredient("pm-post-transition-metals-ore", 12),
+      PM.ingredient("pm-sodium-hydroxide", 4, "fluid"),
       PM.ingredient("pm-chromic-acid", 2, "fluid")
     },
     allow_decomposition = false,
