@@ -1698,6 +1698,19 @@ data:extend({
     base_color = {r = 0.56, g = 0.422, b = 0.22},
     flow_color = {r = 0.56, g = 0.422, b = 0.22}
   },
+  {
+    type = "fluid",
+    name = "pm-aluminium-hydroxide-slurry",
+    icon_size = 64,
+    icon = "__periodic-madness__/graphics/icons/fluids/calcium-hydroxide-slurry.png",
+    subgroup = "pm-aluminium-ptm",
+    order = "c",
+    default_temperature = 15,
+    base_color = {r = 0.75, g = 0.75, b = 0.75},
+    flow_color = {r = 0.75, g = 0.75, b = 0.75}
+  },
+
+
 	{
 		type = "fluid",
 		name = "pm-liquid-heat",
